chore: clear the Qodana findings in the annotator, lexer and tokenizer tests
`ModuleAttributeTest`'s issue links become `<a href>`, and its
"control" KDoc goes with the section note on deleting a branch: the
annotator now leaves a construct it cannot classify uncoloured instead
of reporting it, so neither guard holds. `TokenizerTest` names its
expected value, and `flex_lexer.Test` loses a doubled blank line.